Updated to comment out Unity connection
Run the game with (mpf both -x) and it will run without hardware
connection

--- a/modes/base/config/base.yaml
+++ b/modes/base/config/base.yaml
@@ -139,6 +139,16 @@ shots:
     shot_centercaptive:
         switch: s_centercaptive
         profile: profile_insert
+
+shows:
+   flash_red:
+      - time: 0
+        lights:
+          (led): red
+      - time: +1
+        lights:
+          (led): off
+      - time: +1        
         
 shot_profiles:  
     profile_spinner:
