--- a/config/display.yaml
+++ b/config/display.yaml
@@ -8,19 +8,19 @@ displays:
 window:
   width: 400
   height: 800
-  title: Proto1Fucked
+  title: Proto1_ShareVersion
   resizable: false
   fullscreen: false
   borderless: false
   exit_on_escape: true
   source_display: window
 
-bcp:
-    debug: True
-    connections:
-        unity_display:
-            host: localhost
-            port: 9001
-            type: mpf.core.bcp.bcp_socket_client.BCPClientSocket
-            required: True
-            exit_on_close: True
+#bcp:
+#    debug: True
+ #   connections:
+#        unity_display:
+#            host: localhost
+#            port: 9001
+#            type: mpf.core.bcp.bcp_socket_client.BCPClientSocket
+#            required: True
+#            exit_on_close: True
