so many fucking super modes you wont even understand!!

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -20,3 +20,9 @@ modes:
    - access
    - 30flips
    - high_score
+   - superspinner
+   - superdrop
+   - superramp
+   - supercaptive
+   - supersling
+   - superduper
