--- a/modes/boss1success/config/boss1success.yaml
+++ b/modes/boss1success/config/boss1success.yaml
@@ -1,12 +1,19 @@
 #config_version=5
 mode:
   start_events: boss1_success
-  stop_events: 
+  stop_events: timer_boss1_success_timer_complete
   priority: 200
 
-  
+timers:
+    boss1_success_timer:
+        start_value: 30
+        end_value: 0
+        direction: down
+        tick_interval: 1s
+        start_running: true  
+    
   
 variable_player:
     shot_ring_hit:
-        score: 5000
-        boss1hits: 2
+        score: 10000
+        coins: 1
